--- a/_posts/模板.markdown
+++ b/_posts/模板.markdown
@@ -6,7 +6,7 @@ date:       2016-03-03 22:00:00
 author:     "FishYan"
 header-img: "img/blog-header.png"
 tags:
-    - UWP
-    - Visual Sutdio 2017
+    - iOS
+    
 ---
 
