--- a/_posts/模板.markdown
+++ b/_posts/模板.markdown
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "优雅的从Objective-C转向Swift"
+title:      "Swift中的map 和 flatMap 原理及用法"
 subtitle:   "Swift"
 date:       2016-12-25 22:00:00
 author:     "FishYan"
