--- a/_posts/2016-01-03-download.markdown
+++ b/_posts/2016-01-03-download.markdown
@@ -5,6 +5,7 @@ subtitle:   "使用系统NSURLSessionDownloadTask实现简单的断点下载"
 date:       2016-02-03 22:00:00
 author:     "FishYan"
 header-img: "img/blog-header.png"
+ catalog:    true
 tags:
     - iOS
 ---
