--- a/_posts/2016-05-13-Dynamics.markdown
+++ b/_posts/2016-05-13-Dynamics.markdown
@@ -5,6 +5,7 @@ subtitle:   "iOS 9 学习系列"
 date:       2016-05-13 22:00:00
 author:     "FishYan"
 header-img: "img/blog-header.png"
+catalog:    true
 tags:
     - iOS
     - iOS 9 新特性
