--- a/_posts/2016-06-19-Gameplay.markdown
+++ b/_posts/2016-06-19-Gameplay.markdown
@@ -4,7 +4,8 @@ title:      "iOS 9 学习系类: Gameplay Kit – Pathfinding"
 subtitle:   "iOS 9 学习系列"
 date:       2016-06-19 22:00:00
 author:     "FishYan"
-header-img: "img/blog-header.png"
+header-img: "img/blog-header.png" 
+catalog:    true
 tags:
     - iOS
     - iOS 9 新特性
