--- a/_posts/2016-10-08-CALayer.markdown
+++ b/_posts/2016-10-08-CALayer.markdown
@@ -4,7 +4,8 @@ title:      "iOS动画Animation-4-1:CALayer"
 subtitle:   "iOS 动画 Animation"
 date:       2016-10-08 22:00:00
 author:     "FishYan"
-header-img: "img/blog-header.png"
+header-img: "img/blog-header.png" 
+catalog:    true
 tags:
     - iOS
     - iOS 动画
