--- a/_posts/2016-04-24-ApplePay.markdown
+++ b/_posts/2016-04-24-ApplePay.markdown
@@ -4,7 +4,8 @@ title:      "iOS 9 学习系列: Apple Pay"
 subtitle:   "iOS 9 学习系列"
 date:       2016-04-24 22:00:00
 author:     "FishYan"
-header-img: "img/blog-header.png"
+header-img: "img/blog-header.png" 
+catalog:    true
 tags:
     - iOS
     - iOS 9 新特性
