--- a/_posts/2016-11-05-UIBezier.markdown
+++ b/_posts/2016-11-05-UIBezier.markdown
@@ -4,7 +4,8 @@ title:      "iOS 动画Animation - 5：UIBezier"
 subtitle:   "iOS 动画 Animation"
 date:       2016-11-05 22:00:00
 author:     "FishYan"
-header-img: "img/blog-header.png"
+header-img: "img/blog-header.png" 
+catalog:    true
 tags:
     - iOS
     - iOS 动画
