--- a/_posts/2017-04-25-UWP1Test.markdown
+++ b/_posts/2017-04-25-UWP1Test.markdown
@@ -16,6 +16,10 @@ tags:
 Your browser does not support the video tag.
 </video>
 
+<br>
+<embed height="415" width="544" quality="high" allowfullscreen="true" type="application/x-shockwave-flash" src="//static.hdslb.com/miniloader.swf" flashvars="aid=7997007&page=1" pluginspage="//www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash"></embed>
+
+
 
 UWP 通用应用可以运行在 任何 Universal Windows Platform 平台上，包含 Xbox， Microsoft Hub ，Hololens
 
