--- a/_posts/模板.markdown
+++ b/_posts/模板.markdown
@@ -1,10 +1,10 @@
 ---
 layout:     post
-title:      "UWP开发相关内容概述"
+title:      "3.1 UWP开发 什么是XMAL"
 subtitle:   "UWP"
 date:       2017-05-04 22:00:00
 author:     "FishYan"
-header-img: "img/blog-header.png" 
+header-img: "img/UWP-header.jpg" 
 catalog:    true
 tags:
     - UWP
