--- a/_posts/模板.markdown
+++ b/_posts/模板.markdown
@@ -10,3 +10,11 @@ tags:
     - UWP
     - Visual Sutdio
 ---
+<video src="http://v3.365yg.com/70624cb5dc513968f4397a7b4bb4eacf/5912885b/video/m/220a4c168b77db64591abd9a7847d6881e711469060000079b46c4f092/" width="700px" height="400px" controls="controls">
+
+</video>
+
+## 学习要点
+
+**同步发布**
+[今日头条](http://www.toutiao.com/i6418318091737891330/)
