--- a/_posts/iOS基础tips/内存管理.md
+++ b/_posts/iOS基础tips/内存管理.md
@@ -105,5 +105,41 @@ catalog:    true
 > ```
 > .
 
+---
+## Tip3.内存管理方式
+
+- Tagged Pointer：专门用来存储小对象，如NSDate、NSNumber。Tagged Pointer 指针的值不是地址，而是真正的值
   
+- NONPOINTER_ISA：指针中存放对象的相关信息，包含是否为NONPOINTER_ISA类型，是否含关联对象。是否包含c++内容或者使用ARC管理，指针地址，是否有弱引用的指针指向，是否正在被回收，是否引用散列表，引用计数。
+
+```swift
+// x86_64 架构
+struct {
+    uintptr_t nonpointer        : 1;  // 0:普通指针，1:优化过，使用位域存储更多信息
+    uintptr_t has_assoc         : 1;  // 对象是否含有或曾经含有关联引用
+    uintptr_t has_cxx_dtor      : 1;  // 表示是否有C++析构函数或OC的dealloc
+    uintptr_t shiftcls          : 44; // 存放着 Class、Meta-Class 对象的内存地址信息
+    uintptr_t magic             : 6;  // 用于在调试时分辨对象是否未完成初始化
+    uintptr_t weakly_referenced : 1;  // 是否被弱引用指向
+    uintptr_t deallocating      : 1;  // 对象是否正在释放
+    uintptr_t has_sidetable_rc  : 1;  // 是否需要使用 sidetable 来存储引用计数
+    uintptr_t extra_rc          : 8;  // 引用计数能够用 8 个二进制位存储时，直接存储在这里
+};
+
+// arm64 架构
+struct {
+    uintptr_t nonpointer        : 1;  // 0:普通指针，1:优化过，使用位域存储更多信息
+    uintptr_t has_assoc         : 1;  // 对象是否含有或曾经含有关联引用
+    uintptr_t has_cxx_dtor      : 1;  // 表示是否有C++析构函数或OC的dealloc
+    uintptr_t shiftcls          : 33; // 存放着 Class、Meta-Class 对象的内存地址信息
+    uintptr_t magic             : 6;  // 用于在调试时分辨对象是否未完成初始化
+    uintptr_t weakly_referenced : 1;  // 是否被弱引用指向
+    uintptr_t deallocating      : 1;  // 对象是否正在释放
+    uintptr_t has_sidetable_rc  : 1;  // 是否需要使用 sidetable 来存储引用计数
+    uintptr_t extra_rc          : 19;  // 引用计数能够用 19 个二进制位存储时，直接存储在这里
+};
+```
   
+- 散列表：(引用计数表，弱引用表)
+  
+  散列表是一个sideTables的哈希映射表，其中所有的引用计数都存在这个表中（除存在NONPOINTER_ISA中的外）sideTables 包含众多sideTable，每个sideTable包含三个元素spinlock_t自旋锁，RefcountMap引用计数表，weak_table_t弱引用表
