--- a/_posts/2019-06-28-iOS-Base-内存管理.md
+++ b/_posts/2019-06-28-iOS-Base-内存管理.md
@@ -142,4 +142,61 @@ struct {
   
 - 散列表：(引用计数表，弱引用表)
   
-  散列表是一个sideTables的哈希映射表，其中所有的引用计数都存在这个表中（除存在NONPOINTER_ISA中的外）sideTables 包含众多sideTable，每个sideTable包含三个元素spinlock_t自旋锁，RefcountMap引用计数表，weak_table_t弱引用表
+  > 散列表是一个sideTables的哈希映射表，其中所有的引用计数都存在这个表中（除存在NONPOINTER_ISA中的外）sideTables 包含众多sideTable，每个sideTable包含三个元素spinlock_t自旋锁，RefcountMap引用计数表，weak_table_t弱引用表
+
+- 当一个对象访问sideTable时
+  - 首先会取得对象地址，将地址进行哈希运算，与sideTabls中的sideTable个数取余，最后得到的结果就是该对象访问的sideTable
+  - 在取得的sideTable中的RefcountMap表中再进行一次哈希运算，找到该对象在引用计数表中的位置
+  - 如果该位置存在对应的引用计数，则对其操作，如果不存在，则创建一个对应的size_t对象，其实就是个uint无符号整型
+  - 弱引用表也是一张哈希表的结构，其内部包含了每个对象对应的弱引用表weak_entry_t，而weak_entry_t是一个结构体数组，其中包含的则是每一个对象弱引用的对象所对应的指针  
+  - 
+## Tip4. 弱引用
+弱引用不会增加饮用计数，实现原理是：先定义一个变量，然后将对象弱引用赋值给变量，弱引用赋值过程中，只对变量进行赋值，不会增加引用计数，如：
+```swift
+id __weak weakPointer = object;
+```
+实现原理是：
+```swift
+id weakPointer;
+
+objc_initWeak(&weakPointer,object);
+```
+
+## Tip5. 自动释放池
+- autoreleasepool 的工作原理就是压栈和出栈，将将要执行的代码包含其中
+- autoreleasepool 是以栈为节点，通过双向链表的形式组合而成，与线程是一一对应的
+- main函数中的autoreleasepool是在runloop结束的时候调用objc_autoreleasepoolPop的方法的
+- 多层嵌套的autoreleasepool其实就是在栈中多次插入哨兵对象
+- 而在我们开发的过程中，通过for循环加载一些占用内存较大的对象时可以嵌套使用autoreleasepool，在这些对象使用完毕的时候及时被释放掉，这样就不会造成内存过大或过多浪费的情况
+  
+## Tip6. 循环引用
+- 自循环引用
+- 相互循环引用
+- 多循环引用
+- 多出现在block，代理，NSTimer中
+- NSTimer创建时会被系统常驻runloop强引用，导致NSTimer并不会自动被释放，需要在使用完毕后手动置空。
+  
+- 解决循环引用
+  - 插入 __weak 进行弱引用
+  - 在合适的时机终将循环引用的对象置空，中断环引用
+
+## Tip7. 引用计数
+- **assign**： 用于非指针变量，一般用于基础类型和C类型，这些类型不是对象，存在栈中，由系统管理
+- **weak**： 弱引用，不增加引用计数，也不持有对象，当对象消失后自动指向nil，用于防止循环引用
+- **copy**： 建立一个新对象，赋值时对传入值进行拷贝，分深浅copy
+- **strong**： 强引用，会增加引用计数，创建新指针指向原有内存地址，如果指向nil会造成野指针
+- **retain/unsafe_unretained**: MRC时代关键字，ARC已经不再使用。
+  
+## Tip8. 深浅copy
+> 深copy：指针和内存地址都会被copy
+> 
+> 浅copy：只copy指针，不copy内存地址
+
+
+-|不可变对象|可变对象
+--|--|--|--
+copy|浅copy|深copy
+mutableCopy|深copy|深copy
+
+## Tip9. @property
+- @property 是由ivar和setter、getter组成
