--- a/_posts/2019-06-28-Memery.md
+++ b/_posts/2019-06-28-Memery.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "OC"
+title:      "内存管理tips"
 subtitle:   "内存管理tips"
 date:       2019-06-28 22:00:00
 author:     "FishYan"
