--- a/_posts/2019-06-28-Memery.md
+++ b/_posts/2019-06-28-Memery.md
@@ -162,6 +162,7 @@ id weakPointer;
 objc_initWeak(&weakPointer,object);
 ```
 
+
 ## Tip5. 自动释放池
 - autoreleasepool 的工作原理就是压栈和出栈，将将要执行的代码包含其中
 - autoreleasepool 是以栈为节点，通过双向链表的形式组合而成，与线程是一一对应的
@@ -180,23 +181,15 @@ objc_initWeak(&weakPointer,object);
   - 插入 __weak 进行弱引用
   - 在合适的时机终将循环引用的对象置空，中断环引用
 
-## Tip7. 引用计数
-- **assign**： 用于非指针变量，一般用于基础类型和C类型，这些类型不是对象，存在栈中，由系统管理
-- **weak**： 弱引用，不增加引用计数，也不持有对象，当对象消失后自动指向nil，用于防止循环引用
-- **copy**： 建立一个新对象，赋值时对传入值进行拷贝，分深浅copy
-- **strong**： 强引用，会增加引用计数，创建新指针指向原有内存地址，如果指向nil会造成野指针
-- **retain/unsafe_unretained**: MRC时代关键字，ARC已经不再使用。
-  
-## Tip8. 深浅copy
-> 深copy：指针和内存地址都会被copy
-> 
-> 浅copy：只copy指针，不copy内存地址
+## Tip7. 一个objc对象如何进行内存布局
 
-
--|不可变对象|可变对象
---|--|--|--
-copy|浅copy|深copy
-mutableCopy|深copy|深copy
-
-## Tip9. @property
-- @property 是由ivar和setter、getter组成
+- 所有父类的成员变量和自己的成员变量都存放在该对象所对应的存储空间中
+- 每个对象内部都有一个isa指针，指向类对象，类对象的 isa 指针指向元类对象， 元类对象的isa指向根元类，根元类的isa指针指向自己
+- 每个类对象中存放着该对象的
+  - 对象方法列表
+  - 成员变量列表
+  - 属性列表
+- 元类中存放着类对象的
+  - 类方法
+  - 类实例变量
+  - 类对象
