--- a/_posts/2019-06-28-Memery.md
+++ b/_posts/2019-06-28-Memery.md
@@ -185,6 +185,11 @@ objc_initWeak(&weakPointer,object);
 
 - 所有父类的成员变量和自己的成员变量都存放在该对象所对应的存储空间中
 - 每个对象内部都有一个isa指针，指向类对象，类对象的 isa 指针指向元类对象， 元类对象的isa指向根元类，根元类的isa指针指向自己
+  
+isa分为：
+- 纯指针，指向内存地址
+- NON_POINTER_ISA，包含内存地址和其他信息
+
 - 每个类对象中存放着该对象的
   - 对象方法列表
   - 成员变量列表
