--- a/_posts/2016-06-19-Gameplay.markdown
+++ b/_posts/2016-06-19-Gameplay.markdown
@@ -11,6 +11,8 @@ tags:
     - iOS 9 新特性
 ---
 
+# iOS 9 学习系类: Gameplay Kit – Pathfinding
+
 >在之前的发布的 iOS 版本中，苹果就已经非常重视，让开发者编写游戏更简单。他们在 iOS 7 中介绍了 SpriteKit。 SpriteKit 是一个 2D 的图形和动画的库，你可以用来为 iOS 和 OS X 平台编写可交互的游戏。2012年的时候，他们又为 Mac 平台提供了 SceneKit 库，在 WWDC 2014 时，又将其拓展到了 iOS 平台，并增加了一些新的特性，例如粒子系统和物理模拟。
 
 同时用过这两个库后，我个人可以作证，这两个库都是非常好用的。当你在游戏中用来展示可视化的元素时，他们非常有用。但是，毕竟我开发游戏的经验不多，我经常比较疑惑的是，如何去架构一个游戏项目，如果去构建模型，以及如何处理它们之间的关系。
