--- a/_posts/2016-07-06-Security.markdown
+++ b/_posts/2016-07-06-Security.markdown
@@ -11,6 +11,8 @@ tags:
 
 ---
 
+# iOS 加密
+
 - 又是到了应聘的高潮季节，对于面试经常会问到的一个问题就是注册登录，这个很好说，但是要是问起来账号密码是怎么加密的，很多没工作过的同学就不知道该怎么答， 今天就撰文总结了一下常见的加密方式，以及简单的用法。
 -  比较简单的加密方式主要就这几种了AES加密, DES加密, MD5加密,SHA1加密,  BASE64加密
 
