--- a/_posts/2018-06-09-Closures.markdown
+++ b/_posts/2018-06-09-Closures.markdown
@@ -11,6 +11,8 @@ tags:
     - Swift
 ---
 
+# 5. Swift 中的闭包
+
 ### 闭包定义
 
 闭包（Closure）是自包含的函数代码块，可以在代码中被传递和使用。swift 中的闭包和 c 或 oc 中的 block 以及其他的编程语言的匿名函数类似。
