--- a/_posts/模板.markdown
+++ b/_posts/模板.markdown
@@ -1,20 +1,12 @@
 ---
 layout:     post
-title:      "3.1 UWP开发 什么是XAML"
+title:      ""
 subtitle:   "UWP"
 date:       2017-05-04 22:00:00
 author:     "FishYan"
 header-img: "img/UWP-header.jpg" 
 catalog:    true
 tags:
-    - UWP
-    - Visual Sutdio
+    - iOS
+    - Swift
 ---
-<video src="http://v3.365yg.com/70624cb5dc513968f4397a7b4bb4eacf/5912885b/video/m/220a4c168b77db64591abd9a7847d6881e711469060000079b46c4f092/" width="700px" height="400px" controls="controls">
-
-</video>
-
-## 学习要点
-
-**同步发布**
-[今日头条](http://www.toutiao.com/i6418318091737891330/)
