--- a/_posts/2016-06-22-TouchID.markdown
+++ b/_posts/2016-06-22-TouchID.markdown
@@ -11,6 +11,8 @@ tags:
     - iOS 9 新特性
 ---
 
+# iOS 9 学习系列: Touch ID
+
 Touch ID的用法基于一个名为Local Authentication的新框架，这里不打算深入谈论它，因为你可以在苹果官方文档和WWDC session video找到更多的相关信息。此外，我的目的是演示在实际开发中如何使用它。然而，有一点是必须的，那就是当Touch ID将要用于一款应用程序时，该框架几乎要处理所有的事情。该框架提供了一个默认的视图，用来告知用户将一个手指放到iPhone的按钮上进行扫描。如果扫描失败或者用户不想使用扫描，框架允许开发者为用户提供自定义的视图来验证，并且提供一个使用应用的代替方案。该框架也允许开发则设定一个自定义的字符串描述，用于表明请求验证通过的原因。此外，它支持一系列的错误类型，这些错误都能给出错误的原因，并能给出选项供开发者在每一种情况下做出处理。错误类型是用枚举实现的：
 ```swift
 enum LAError : Int { 
