--- a/_posts/模板.markdown
+++ b/_posts/模板.markdown
@@ -1,10 +1,10 @@
 ---
 layout:     post
 title:      ""
-subtitle:   "UWP"
+subtitle:   "Swift"
 date:       2017-05-04 22:00:00
 author:     "FishYan"
-header-img: "img/UWP-header.jpg" 
+header-img: "img/blog-header.png" 
 catalog:    true
 tags:
     - iOS
